--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mantine/hooks": "7.5.3",
     "@mantine/notifications": "^7.5.3",
     "@next/bundle-analyzer": "^14.0.1",
+    "@sendgrid/mail": "^8.1.1",
     "@tabler/icons-react": "^2.47.0",
     "next": "14.0.1",
     "react": "18.2.0",
