--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@next/bundle-analyzer": "^14.0.1",
     "@sendgrid/mail": "^8.1.1",
     "@tabler/icons-react": "^2.47.0",
+    "@vercel/analytics": "^1.2.2",
     "next": "14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
